# rules_haskell_examples

./: .gitignore  README.md  WORKSPACE  nixpkgs.nix  shell.nix
.circleci/: config.yml
cat_hs/: WORKSPACE
examples/: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  tests.hs
examples/tutorial/: WORKSPACE
examples/vector/: BUILD.bazel
haskell/: repositories.bzl
tests/: BUILD  RunTests.hs
tests/hackage/: BUILD
tests/hspec-rules-haskell/: BUILD.bazel  Test.Hspec.RulesHaskell.hs
tutorial/: BUILD.bazel  WORKSPACE
