load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_binary",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.4.3",
)

haskell_binary(
    name = "run-tests",
    srcs = ["tests.hs"],
    compiler_flags = ["-Wall"],
    deps = [
        "@io_tweag_rules_haskell//tests/hackage:base",
        "@io_tweag_rules_haskell//tests/hspec-rules-haskell",
    ],
)
